--- a/app/src/main/res/layout/item_water_intake.xml
+++ b/app/src/main/res/layout/item_water_intake.xml
@@ -54,14 +54,14 @@
         </LinearLayout>
 
         <!-- Delete Button -->
-        <ImageButton
+        <ImageView
             android:id="@+id/btnDelete"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/ic_delete"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/delete"
-            app:tint="@color/error"/>
+            app:tint="#C61414" />
 
     </LinearLayout>
 
