--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="palette_jasmine">#F7D487</color>
+    <color name="palette_bittersweet">#FF6C61</color>
+    <color name="palette_alice_blue">#F5FDFF</color>
+    <color name="palette_tiffany_blue">#88E9E7</color>
+    <color name="palette_jungle_green">#19AD88</color>
+    <color name="palette_process_cyan">#20B8EA</color>
+    <color name="palette_eerie_black">#1B1B1B</color>
+
     <!-- Primary Colors -->
     <color name="primary_blue">#3EAFDE</color>
 
@@ -28,4 +36,6 @@
 
     <!-- Transparent -->
     <color name="transparent">#00000000</color>
+
+
 </resources>
