--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="palette_jasmine">#F7D487</color>
     <color name="palette_bittersweet">#FF6C61</color>
     <color name="palette_alice_blue">#F5FDFF</color>
+    <color name="palette_card_blue">#F5FDFF</color>
     <color name="palette_tiffany_blue">#88E9E7</color>
     <color name="palette_jungle_green">#19AD88</color>
     <color name="palette_process_cyan">#20B8EA</color>
