--- a/app/src/main/res/layout/dialog_custom_amount.xml
+++ b/app/src/main/res/layout/dialog_custom_amount.xml
@@ -12,7 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="24dp">
+        android:padding="24dp"
+        android:background="@color/palette_alice_blue"
+        >
 
         <TextView
             android:id="@+id/tvDialogTitle"
