--- a/app/src/main/res/layout/item_tip.xml
+++ b/app/src/main/res/layout/item_tip.xml
@@ -55,7 +55,7 @@
         </LinearLayout>
 
         <!-- Share Button -->
-        <ImageButton
+        <ImageView
             android:id="@+id/btnShare"
             android:layout_width="40dp"
             android:layout_height="40dp"
